--- a/new.css
+++ b/new.css
@@ -1,4 +1,11 @@
-body, html {
+h1 {
+    color:transparent;
+    text-shadow: 4px 4px 7px rgba(20,20,20,0,4),0 0 #000;
+}
+
+
+
+body{
     background-color: #12171a;
     width: 100%; 
     height: 100%;
@@ -7,227 +14,6 @@ body, html {
     font-family: 'Questrial', sans-serif;
 }
 
-.navbar {
-    position: absolute;
-    width: 338px;
-    height: 24px;
-
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 25px;
-
-    color: #FFFFFF;
-}
-
-.navbar a {
-    float: left;
-    display: block;
-    color: #d8d8d8;
-    text-align: center;
-    padding: 0px 16px;
-    text-decoration: none;
-}
-
-.navbar a:hover {
-    color: rgba(199, 199, 199, 0.9);
-}
-
-.navbar:hover .navbar-content {
-  display: block;
-}
-
-.nav b{
-    overflow: hidden;
-    background-color:#56CCF2; 
-    top: 40px; 
-    left:70%;
-    position: absolute;
-    width: 40px;
-    height: 50px;
-    border: 0px solid #56CCF2;
-}
 
 
 
-
-.topline{
-    overflow: hidden;
-    background-color:#56CCF2; 
-    top: 10; 
-    left:0;
-    position: absolute;
-    width: 100%;
-    height: 0px;
-    border: 2px solid #56CCF2;
-}
-
-.circle {
-    position: absolute;
-    top: 90px; 
-    left:50%;
-
-}
-
-
-
-
-.big_text {
-    position: absolute;
-    width: 263px;
-    height: 33px;
-    top:40%;
-    left:5%;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 128px;
-    line-height: 99px;
-
-    color: #FFFFFF;
-}
-
-.half_text {
-    position: absolute;
-    width: 206px;
-    height: 36px;
-    top:60%;
-    left:5%;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 37px;
-
-    color: #FFFFFF;
-}
-
-
-
-.button {
-    position: relative;
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    width: 206px;
-    height: 400px;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
-
-.button1 {
-  background-color: #1d282e; 
-  color: black; 
-  left: 10%;
-}
-
-.button1:hover {
-    color: white;
-    font-size: 60px;
-    width: 226px;
-    height: 430px;
-
-}
-
-.button2 {
-  background-color: #1d282e; 
-  color: black; 
-  left: 15%;
-}
-
-.button2:hover {
-    color: white;
-    font-size: 60px;
-    width: 226px;
-    height: 430px;
-
-}
-
-
-.button3 {
-  background-color: #1d282e; 
-  color: black; 
-  left: 20%;
-}
-
-.button3:hover {
-    color: white;
-    font-size: 60px;
-    width: 226px;
-    height: 430px;
-
-}
-
-
-.button4 {
-    color: black; 
-    overflow: hidden;
-    background-color:#56CCF2; 
-    top: 40px; 
-    left:70%;
-    position: absolute;
-    width: 40px;
-    height: 50px;
-    border: 0px solid #56CCF2;
-}
-
-.button4:hover {
-    display: none;
-    position: relative;
-    background-color: #12171a;
-    min-width: 160px;
-    z-index: 1;
-    box-shadow: 0 3px #56CCF2;
-
-
-}
-
-.hamburger{
-    overflow: hidden;
-    background-color:#56CCF2; 
-    top: 20px; 
-    left:90%;
-    position: absolute;
-    width: 40px;
-    height: 0px;
-    border: 2px solid #56CCF2;
-}
-
-.hamburger_2{
-    overflow: hidden;
-    background-color:#56CCF2; 
-    top: 30px; 
-    left:90%;
-    position: absolute;
-    width: 40px;
-    height: 0px;
-    border: 2px solid #56CCF2;
-}
-
-
-.dropdown {
-    
-    position: relative;
-    display: inline-block;
-    top: 0px; 
-    left:68%;
-}
-
-
-
-.dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
