--- a/new.css
+++ b/new.css
@@ -1,18 +1,21 @@
-.text {
-    color:transparent;
-    text-shadow: 4px 4px 7px rgba(20,20,20,0,4),0 0 #000;
-}
-
-
-
 body{
-    background-color: #12171a;
+    background-color: #292A30;
     width: 100%; 
     height: 100%;
     min-width: 1000px; 
     min-height: 1000px;
-    font-family: 'Questrial', sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
+
+
+.text {
+    color:#292A30;
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.425),-2px -2px 90px #FFFFFF;
+}
+
+
+
+
 
 
 
