--- a/new.css
+++ b/new.css
@@ -7,14 +7,50 @@ body{
     font-family: 'Rubik', sans-serif;
 }
 
-
 .text {
     color:#292A30;
-    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.425),-2px -2px 90px #FFFFFF;
+    text-shadow: 0px 0px 20px rgb(0, 0, 0);
+    font-size: 65px;
+}
+
+.text:hover {
+    color:#292A30;
+    text-shadow: -1px -2px 30px rgba(0, 0, 0, 0.411);
 }
 
 
 
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  .topnav a {
+    float: left;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a.icon {
+    float: right;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
 
 
 
