--- a/new.css
+++ b/new.css
@@ -5,57 +5,60 @@ body{
     font-family: 'Rubik', sans-serif;
 }
 
-.text {
-    color:#292A30;
-    text-shadow: 0px 0px 20px rgb(0, 0, 0);
-    font-size: 65px;
-}
 
-.text:hover {
-    color:#292A30;
-    text-shadow: -1px -2px 30px rgba(0, 0, 0, 0.411);
-}
 
-.menu {
-	border: 6px solid green;
-	width: 60px;
-	height: 10%;
-	position: absolute;
-	margin-left: -3px;
-	top: 10%;
-	left:90%;
-}
-
-.topnav {
-	overflow: hidden;
-	position: relative;
-	left: 90%;
-	width:10%;
-}
-
-.topnav #myLinks {
-	display: none;
-}
-
-.topnav a {
+#menu{
 	color: white;
-	padding:20% 0;
-	text-decoration: none;
-	font-size: 100%;
-	display: block;
-	border-width:10%;
-	border-color:rgb(235, 235, 235);
+	display: none;
+	background-color:rgb(76, 93, 134) ;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	position: relative;
+
+}
+
+#menu button {
+	padding: 20%;
+	width: 60%;
+	background-color:rgb(76, 93, 134) ;
+	border: none;
+	color: white;
+}
+
+.logo {
+    color:rgb(233, 233, 233);
+    text-shadow: 0px 0px 20px rgb(221, 221, 221);
+    font-size: 65px;
+	position: absolute;
+	top:-5%;
+}
+
+
+.fa {
+	width: 40px;
+	height: 5px;
+	border-radius: 20px;
+	background: rgba(230, 230, 230, 0.562);
+	display: inline-block;
+	position: absolute;
+	left: 80%;
 
 }
 
 
-@media only screen and (max-width: 768px) {
-	.menu {
-		left:80%;
-	}
+h1{
+    color:rgb(238, 238, 238);
+	position: absolute;
+	font-size: 50px;
+	text-align: center;
 
-	.topnav {
-		left: 80%;
-		width:20%;
-	}
+}
+
+
+.b {
+
+	background-color:rgba(76, 93, 134, 0) ;
+	border: none;
+
 }
