--- a/new.css
+++ b/new.css
@@ -1,76 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Aleo&display=swap');
 
-body{
-    background-color: #292A30;
 
-    font-family: 'Rubik', sans-serif;
+*{
+    background-color: #282C34;
+	box-sizing: border-box;
+	margin:0;
+	padding:0;
 }
 
-
-
-#menu{
-	color: white;
-	display: none;
-	background-color:rgb(76, 93, 134) ;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	position: relative;
-
-}
-
-#menu button {
-	padding: 20%;
-	width: 60%;
-	background-color:rgb(76, 93, 134) ;
-	border: none;
-	color: white;
-}
-
-.logo {
-    color:rgb(233, 233, 233);
-    text-shadow: 0px 0px 20px rgb(221, 221, 221);
-    font-size: 65px;
-	position: absolute;
-	top:-5%;
-}
-
-
-.fa {
-	width: 40px;
-	height: 5px;
-	border-radius: 20px;
-	background: rgba(230, 230, 230, 0.562);
-	display: inline-block;
-	position: absolute;
-	left: 80%;
-}
-
-#back {
-
-	display: none;
-	color: rgba(230, 230, 230, 0.562);
-	border: none;
-	background-color:rgb(76, 93, 134) ;
-	display: none;
-	z-index: 2;
-	position: absolute;
-	
+header{
+	display: flex;
+	justify-content: space-between;
+	padding: 1% 4%;
+	background-color: #56B6C2;
 
 }
 
+li, a{
+	font-family: 'Roboto',Regular;
+	font-size: 36px;
+	color:rgb(0, 0, 0);
+	text-decoration: none;
+	background-color: #56B6C2;
+}
 
-h1{
-    color:rgb(238, 238, 238);
-	position: absolute;
-	font-size: 50px;
+h1 {
+	font-family: 'Aleo', serif;
+	font-size: 54px;
+	font-weight: 300; 
+	color:rgb(255, 255, 255);
+	text-decoration: none;
 	text-align: center;
+	padding: 2%;
+	background-color: none;
 
 }
 
-
-.b {
-
-	background-color:rgba(76, 93, 134, 0) ;
-	border: none;
+header h1{
+	background-color: #56B6C2;
 
 }
+
+.nav{
+	list-style:none;
+	background-color: #56B6C2;
+}
+
+.nav li{
+	display: inline-block;
+	padding:38px;
+	background-color: #56B6C2;
+}
+
+
+
+
