--- a/new.css
+++ b/new.css
@@ -8,31 +8,31 @@
 	padding:0;
 }
 
+
+
 header{
 	display: flex;
 	justify-content: space-between;
 	padding: 1% 4%;
 	background-color: #56B6C2;
-
 }
 
-li, a{
-	font-family: 'Roboto',Regular;
-	font-size: 36px;
-	color:rgb(0, 0, 0);
-	text-decoration: none;
+header h1{
+	padding: 2%;
+	font-size:3.25rem;
 	background-color: #56B6C2;
 }
 
+
+
+
 h1 {
 	font-family: 'Aleo', serif;
-	font-size:220px;
+	font-size:13.75rem;
 	font-weight: 300; 
 	color:rgb(255, 255, 255);
 	text-decoration: none;
 	text-align: center;
-	background-color: none;
-
 }
 
 h1 p{
@@ -40,25 +40,45 @@ h1 p{
 	color: #3A6977;
 }
 
-header h1{
-	background-color: #56B6C2;
-	padding: 2%;
-	font-size:52px;
 
 
+
+h{
+	font-size: 63px;
+	color: rgb(255,255,255);
+	font-family: 'Roboto',Regular;
 }
+
+div h a{
+	font-size: 74px;
+	font-family: 'Aleo', serif;
+}
+
+
+div a {
+	color: rgb(255,255,255);
+	font-family: 'Roboto',Regular;
+}
+
 
 .nav{
 	list-style:none;
+	font-family: 'Roboto',Regular;
+	font-size: 36px;
 	background-color: #56B6C2;
 }
 
 .nav li{
+	background-color: #56B6C2;
 	display: inline-block;
 	padding:38px;
-	background-color: #56B6C2;
+
 }
 
-
+.nav li a{
+	background-color: #56B6C2;
+	text-decoration: none;
+	color:rgb(0, 0, 0);
+}
 
 
