--- a/new.css
+++ b/new.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Aleo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 
 *{
@@ -7,8 +8,6 @@
 	margin:0;
 	padding:0;
 }
-
-
 
 header{
 	display: flex;
@@ -40,7 +39,12 @@ h1 p{
 	color: #3A6977;
 }
 
+h1 a{
+	color:rgb(255, 255, 255);
 
+	background-color: #56B6C2;
+	text-decoration: none;
+}
 
 
 h{
@@ -48,6 +52,8 @@ h{
 	color: rgb(255,255,255);
 	font-family: 'Roboto',Regular;
 }
+
+
 
 div h a{
 	font-size: 74px;
@@ -73,7 +79,6 @@ div p {
 	background-color: #56B6C2;
 	display: inline-block;
 	padding:38px;
-
 }
 
 .nav li a{
@@ -82,4 +87,7 @@ div p {
 	color:rgb(0, 0, 0);
 }
 
-
+.icons{
+	display: flex;
+	justify-content: center;
+}
