--- a/new.css
+++ b/new.css
@@ -18,7 +18,7 @@ header{
 
 header h1{
 	padding: 2%;
-	font-size:3.35vmax;
+	font-size:3.35rem;
 	background-color: #56B6C2;
 }
 
@@ -47,7 +47,7 @@ h1 a{
 }
 
 
-h{
+h{ 
 	font-size: 63px;
 	color: rgb(255,255,255);
 	font-family: 'Roboto',Regular;
@@ -56,7 +56,7 @@ h{
 
 
 div h a{
-	font-size: 74px;
+	font-size: 4rem;
 	font-family: 'Aleo', serif;
 }
 
@@ -71,7 +71,7 @@ div p {
 .nav{
 	list-style:none;
 	font-family: 'Roboto',Regular;
-	font-size: 36px;
+	font-size: 2.8rem;
 	background-color: #56B6C2;
 }
 
