--- a/new.css
+++ b/new.css
@@ -13,6 +13,15 @@ body {
 	height: 100%;
 }
 
+#about{
+	background-image: url(images/a.svg);
+	background-repeat: no-repeat;
+}
+
+#ota{
+	background-image: url(images/ota.svg);
+}
+
 .btn{
 	width:20rem;
 	font-weight: bold;
@@ -34,30 +43,24 @@ body {
 	margin-top:10%;
 }
 
-.text{
-	position: fixed;
-	z-index: -1;
-	color:#2D3137;
-	transform: rotate(-45deg);
-	top:-280%;
+
+#arrow{
+
+	border: 0px;
+	background-color:rgba(0, 30, 3, 0);
+	left:10%;
 }
 
-.text-2{
-	position: fixed;
-	z-index: -1;
-	color:#2D3137;
-	transform: rotate(-45deg);
-	top:-555%;
-}
 
-@media only screen and (max-width: 600px) {
-	
+@media only screen and (max-width: 375px) {
+	#btn{
 
-	.text-2{
-		position: fixed;
-		z-index: -1;
-		color:#2D3137;
-		transform: rotate(-45deg);
-		top:-700%;
+		margin-left:20%;
 	}
-}
+	#b{
+
+		margin-left:10%;
+	}
+
+}	
+
