--- a/new.css
+++ b/new.css
@@ -14,12 +14,14 @@ body {
 }
 
 #c{
-	width:95vw;
-	height:90vh;
+	display: flex;
 	position:relative;
-	margin-top: 5vh;
+	margin-top: 3vh;
+	margin-left: 2vw;
+	width: 91vw;
+	height: 91vh;
 	border-radius: 2.5rem;
-	background-color: rgb(15, 15, 15)
+	background-color: rgb(15, 15, 15);	
 }
 
 ul{
@@ -51,5 +53,47 @@ p{
 
 }
 
+@media screen and (max-width: 600px) {
 
+	#c{
+		position:relative;
+		border-radius: 2.5rem;
+		background-color: rgb(15, 15, 15);
+		width:30rem;	
+		height:46rem;
+		margin-top: 3rem;
+		margin-left: 2rem;
 
+	}
+
+}
+
+@media screen and (max-width: 380px) {
+
+	#c{
+		position:relative;
+		border-radius: 2.5rem;
+		background-color: rgb(15, 15, 15);
+		width:30rem;	
+		height: 53rem;
+		margin-top: 3rem;
+		margin-left: 2rem;
+
+	}
+
+}
+
+@media screen and (max-width: 380px) {
+
+	#c{
+		position:relative;
+		border-radius: 2.5rem;
+		background-color: rgb(15, 15, 15);
+		width:30rem;	
+		height: 63rem;
+		margin-top: 3rem;
+		margin-left: 2rem;
+
+	}
+
+}
